--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-    <header  class=" mt-3">
+    <header  class=" mt-3 bg-[#fffbf0]">
         <nav class=" p-4 lg:p-0 m-auto lg:max-w-[1300px] flex justify-between items-center ">
            <div>
              <img class=" w-[148px] lg:w-[290px] object-contain" src="icons/logo.png" alt="">
@@ -30,13 +30,13 @@
 
          <section class=" px-4 lg:p-0 lg:max-w-[1300px] m-auto lg:flex items-center  justify-between">
                  <div class="">
-                    <h1 class=" text-[40px] font-bold text-yellow-500">Be the Penguins</h1>    
-                    <h1 class=" text-[40px] font-bold text-slate-700">OF WINTER</h1>
+                    <h1 class=" lg:text-6xl text-[40px] font-bold text-yellow-500">Be the Penguins</h1>    
+                    <h1 class="lg:text-6xl text-[40px] font-bold text-slate-700">OF WINTER</h1>
                     <p class=" text-slate-600">
                         Lorem Ipsum is simply dummy text of the printing 
                         and typesetting industry.
                     </p>
-                    <button class=" bg-[#9EB63D] text-white px-7 py-4 rounded-sm my-4">BUY NOW</button>
+                    <button class=" flex items-center gap-2 bg-[#9EB63D] text-white px-7 py-4 rounded-sm my-4"><i class="fa-solid fa-cart-shopping"></i> BUY NOW</button>
                  </div>
 
                  <div class=" my-4 lg:mr-10 ">
@@ -45,7 +45,58 @@
          </section>
     </header >
     <body>
-        
+        <section class="m-auto lg:max-w-[1300px]">
+            <h1 class="ml-4 my-5 text-6xl font-bold">Women Jacket</h1>
+            <div class="p-4 lg:p-0 grid grid-cols-1 lg:grid-cols-3 gap-4 ">
+                <div class=" shadow-lg p-4">
+                    <div class=" rounded-lg flex items-center justify-center bg-slate-200 p-6 box-border">
+                        <img class="max-w-[290px]" src="images/jacket-1.png" alt="">
+                    </div>
+                    <div>
+                        <h1 class="text-2xl font-bold text-slate-700">Yellow Coat Jacket </h1>
+                        <p class=" text-slate-600">Lorem Ipsum is simply dummy text of the 
+                            printing and typesetting industry.
+                        </p>
+                    </div>
+                    <div class="flex justify-between items-center">
+                        <p class=" text-5xl font-bold text-yellow-500">$234</p>
+                        <button class=" flex items-center gap-2 bg-[#9EB63D] text-white px-7 py-4 rounded-sm my-4"><i class="fa-solid fa-cart-shopping"></i> BUY NOW</button>
+                    </div>
+                </div>
+                <!--  -->
+                <div class=" shadow-lg p-4">
+                    <div class=" rounded-lg flex items-center justify-center bg-slate-200 p-6 box-border">
+                        <img class="max-w-[290px]" src="images/jacket-2.png" alt="">
+                    </div>
+                    <div>
+                        <h1 class="text-2xl font-bold text-slate-700">Yellow Coat Jacket </h1>
+                        <p class=" text-slate-600">Lorem Ipsum is simply dummy text of the 
+                            printing and typesetting industry.
+                        </p>
+                    </div>
+                    <div class="flex justify-between items-center">
+                        <p class=" text-5xl font-bold text-yellow-500">$234</p>
+                        <button class=" flex items-center gap-2 bg-[#9EB63D] text-white px-7 py-4 rounded-sm my-4"><i class="fa-solid fa-cart-shopping"></i> BUY NOW</button>
+                    </div>
+                </div>
+                <!--  -->
+                <div class=" shadow-lg p-4">
+                    <div class=" rounded-lg flex items-center justify-center bg-slate-200 p-6 box-border">
+                        <img class="max-w-[290px]" src="images/jacket-3.png" alt="">
+                    </div>
+                    <div>
+                        <h1 class="text-2xl font-bold text-slate-700">Yellow Coat Jacket </h1>
+                        <p class=" text-slate-600">Lorem Ipsum is simply dummy text of the 
+                            printing and typesetting industry.
+                        </p>
+                    </div>
+                    <div class="flex justify-between items-center">
+                        <p class=" text-5xl font-bold text-yellow-500">$234</p>
+                        <button class=" flex items-center gap-2 bg-[#9EB63D] text-white px-7 py-4 rounded-sm my-4"><i class="fa-solid fa-cart-shopping"></i> BUY NOW</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
     <footer>
 
