--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                  </div>
          </section>
     </header >
-    <body>
+    <main>
         <section class="m-auto lg:max-w-[1300px]">
             <h1 class="ml-4 my-5 text-6xl font-bold">Women Jacket</h1>
             <div class="p-4 lg:p-0 grid grid-cols-1 lg:grid-cols-3 gap-4 ">
@@ -97,9 +97,107 @@
                 </div>
             </div>
         </section>
-    </body>
-    <footer>
 
+        <section class="m-auto lg:max-w-[1300px] mt-32">
+            <h1 class="ml-4 my-5 text-6xl font-bold">Man Jacket</h1>
+            <div class="p-4 lg:p-0 grid grid-cols-1 lg:grid-cols-3 gap-4 ">
+                <div class=" shadow-lg p-4">
+                    <div class=" rounded-lg flex items-center justify-center bg-slate-200 p-6 box-border">
+                        <img class="max-w-[290px]" src="images/jacket-6.png" alt="">
+                    </div>
+                    <div>
+                        <h1 class="text-2xl font-bold text-slate-700">Man Casual Jackets</h1>
+                        <p class=" text-slate-600">Lorem Ipsum is simply dummy text of the 
+                            printing and typesetting industry.
+                        </p>
+                    </div>
+                    <div class="flex justify-between items-center">
+                        <p class=" text-5xl font-bold text-yellow-500">$234</p>
+                        <button class=" flex items-center gap-2 bg-[#9EB63D] text-white px-7 py-4 rounded-sm my-4"><i class="fa-solid fa-cart-shopping"></i> BUY NOW</button>
+                    </div>
+                </div>
+                <!--  -->
+                <div class=" shadow-lg p-4">
+                    <div class=" rounded-lg flex items-center justify-center bg-slate-200 p-6 box-border">
+                        <img class="max-w-[290px]" src="images/jacket-5.png" alt="">
+                    </div>
+                    <div>
+                        <h1 class="text-2xl font-bold text-slate-700">Man Leather Jackets</h1>
+                        <p class=" text-slate-600">Lorem Ipsum is simply dummy text of the 
+                            printing and typesetting industry.
+                        </p>
+                    </div>
+                    <div class="flex justify-between items-center">
+                        <p class=" text-5xl font-bold text-yellow-500">$234</p>
+                        <button class=" flex items-center gap-2 bg-[#9EB63D] text-white px-7 py-4 rounded-sm my-4"><i class="fa-solid fa-cart-shopping"></i> BUY NOW</button>
+                    </div>
+                </div>
+                <!--  -->
+                <div class=" shadow-lg p-4">
+                    <div class=" rounded-lg flex items-center justify-center bg-slate-200 p-6 box-border">
+                        <img class="max-w-[290px]" src="images/jacket-4.png" alt="">
+                    </div>
+                    <div>
+                        <h1 class="text-2xl font-bold text-slate-700">Snowboard Jacket Mens </h1>
+                        <p class=" text-slate-600">Lorem Ipsum is simply dummy text of the 
+                            printing and typesetting industry.
+                        </p>
+                    </div>
+                    <div class="flex justify-between items-center">
+                        <p class=" text-5xl font-bold text-yellow-500">$234</p>
+                        <button class=" flex items-center gap-2 bg-[#9EB63D] text-white px-7 py-4 rounded-sm my-4"><i class="fa-solid fa-cart-shopping"></i> BUY NOW</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+            <section class=" p-6 lg:p-0 mt-20 m-auto lg:max-w-[1300px] grid  gap-y-4 grid-cols-1 lg:grid-cols-2 ">
+                    <div class=" ">
+                        <div class=" flex items-center  max-w-[500px] p-5 shadow rounded-lg gap-6 mb-6">
+                            <div>
+                                <img class="w-[82px]" src="icons/box.png" alt="">
+                            </div>
+                            <div>
+                                <h1 class=" text-2xl text-slate-700 font-bold">Find The Perfect Fit</h1>
+                                <p class=" text-slate-600 "> 
+                                Everybody is different, which is why we
+                                offer styles for every body.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class=" flex items-center  max-w-[500px] p-5 shadow   rounded-lg gap-6 mb-6">
+                            <div>
+                                <img class="w-[82px]" src="icons/box.png" alt="">
+                            </div>
+                            <div>
+                                <h1 class=" text-2xl text-slate-700 font-bold">Find The Perfect Fit</h1>
+                                <p class=" text-slate-600 "> 
+                                Everybody is different, which is why we
+                                offer styles for every body.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class=" flex items-center  max-w-[500px] p-5 shadow  rounded-lg gap-6">
+                            <div>
+                                <img class="w-[82px]" src="icons/box.png" alt="">
+                            </div>
+                            <div>
+                                <h1 class=" text-2xl text-slate-700 font-bold">Find The Perfect Fit</h1>
+                                <p class=" text-slate-600 "> 
+                                Everybody is different, which is why we
+                                offer styles for every body.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div>
+                         <img src="images/shopping.png" alt="">
+                    </div>
+            </section>
     </footer>
 </body>
 </html>
